Fixed a bunch of layout issues

--- a/public/css/wilsonzhao.css
+++ b/public/css/wilsonzhao.css
@@ -13,7 +13,7 @@ a:hover {
 } 
 
 .project {
-    width: 50%;
+    width: 45%;
     border-style: solid;
     border-width: 5px;
     padding: 1em;
@@ -27,8 +27,10 @@ a:hover {
 
 .sidebar img {
     display: none;
+    max-width: 100%;
+    max-height: 100%;
 }
-@media (min-width: 38em) {
+@media (min-width: 48em) {
     .sidebar img {
         display: block;
         height: 65%;
